[package]
name = "wgpu_render"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "wgpu_render"

[dependencies]
env_logger = "0.11.1"
log = "0.4.20"
wgpu = { version = "0.19.1", default-features = false, features = ["webgl", "wgsl"] }
winit = "0.29.10"
pollster = "0.3.0"
bytemuck = { version = "1.14.1", features = ["derive"] }
falling_sand = { path = "../falling_sand" }
web-time = "1.0.0"
anyhow = "1.0.79"
lazy_static = "1.4.0"
nalgebra = "0.32.4"

[target.'cfg(target_arch = "wasm32")'.dependencies]
console_error_panic_hook = "0.1.7"
console_log = "1.0.0"
wasm-bindgen = "0.2.90"
wasm-bindgen-futures = "0.4.40"
web-sys = { version = "0.3.67", features = [
    "Document",
    "Window",
    "Element"
]}
